# rpc_demo

./: client.py  compile.sh  main.py  pyproject.toml  readme.md  server.py  setup.py
.github/workflows/: main.yml
protos/: chat.proto
service_chat/: __init__.py
test/: test_servier.py
